--- a/theme/src/scss/content-elements/hero-image.scss
+++ b/theme/src/scss/content-elements/hero-image.scss
@@ -1,13 +1,10 @@
 // X-Small devices (portrait phones, less than 576px)
 // No media query for `xs` since this is the default in Bootstrap
 .ce-hero-image {
-  --t3-ce-hero-image-header-color: var(--t3-white);
-  --t3-ce-hero-image-header-size: 70;
+  --t3-ce-hero-image-header-color: var(--t3-primary);
   --t3-ce-hero-image-subheader-color: var(--t3-white);
-  --t3-ce-hero-image-subheader-size: 60;
   --t3-ce-hero-image-bodytext-color: var(--t3-white);
-  --t3-ce-hero-image-bodytext-size: 25;
-  --t3-ce-hero-image-bodytext-width: 100%;
+  --t3-ce-hero-image-bodytext-width: 75%;
   --t3-ce-hero-image-min-height-on-mobile: 460px;
   --t3-ce-hero-image-primary-overlay: hsla(var(--t3-primary-hs), var(--t3-primary-l), 0.4);
   --t3-ce-hero-image-secondary-overlay: hsla(var(--t3-secondary-hs), var(--t3-secondary-l), 0.4);
@@ -54,21 +51,20 @@
 }
 
 .ce-hero-image__caption-header .header-text-item {
-  font-weight: bold;
   color: var(--t3-ce-hero-image-header-color);
 }
 
 .ce-hero-image__caption-subheader .subheader-text-item {
-  font-weight: bold;
   color: var(--t3-ce-hero-image-subheader-color);
 }
 
 .ce-hero-image__caption-bodytext.fluid-font-size {
-  --font-size: var(--t3-ce-hero-image-bodytext-size);
+  --font-size: 28;
 }
 
 .ce-hero-image__caption-bodytext .bodytext-partial {
   font-size: inherit;
+  font-weight: 500;
   color: var(--t3-ce-hero-image-bodytext-color);
   overflow: hidden;
   display: -webkit-box;
