--- a/theme/src/scss/content-elements/simple-site-header.scss
+++ b/theme/src/scss/content-elements/simple-site-header.scss
@@ -13,7 +13,7 @@
   --t3-ce-header-nav-link-padding-top: 0.7rem;
   --t3-ce-header-nav-link-padding-left: 1rem;
   --t3-ce-header-nav-link-padding-right: 1rem;
-  --t3-ce-header-nav-link-text-transform: none;
+  --t3-ce-header-nav-link-text-transform: uppercase;
   --t3-ce-header-nav-hover-color: hsla(var(--t3-ce-header-nav-color-hs), var(--t3-ce-header-nav-color-l), 0.7);
   --t3-ce-header-nav-hover-bg: hsla(var(--t3-ce-header-nav-color-hs), var(--t3-ce-header-nav-color-l), 0.08);
   --t3-ce-header-nav-active-color: hsla(var(--t3-ce-header-nav-color-hs), var(--t3-ce-header-nav-color-l), 0.7);
