--- a/theme/src/scss/content-elements/site-footer.scss
+++ b/theme/src/scss/content-elements/site-footer.scss
@@ -9,7 +9,6 @@
   --t3-ce-footer-font-size: 0.875rem;
   --t3-ce-footer-links-color: hsl(var(--t3-ce-footer-color-hs), var(--t3-ce-footer-color-l));
   --t3-ce-footer-links-hover-color: hsla(var(--t3-ce-footer-color-hs), var(--t3-ce-footer-color-l), 0.7);
-  --t3-ce-footer-links-text-transform: none;
 
   background-color: var(--t3-ce-footer-bg);
   color: var(--t3-ce-footer-color);
@@ -20,12 +19,11 @@
 
 .ce-site-footer__link {
   display: inline-block;
-  text-transform: var(--t3-ce-footer-links-text-transform);
+  text-transform: uppercase;
   padding: 0.5rem 0;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   color: var(--t3-ce-footer-links-color);
   text-decoration: none;
-  font-weight: 300;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -62,7 +60,7 @@
 }
 
 .ce-site-footer__info-title {
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .ce-site-footer__address-wrp {
@@ -74,6 +72,8 @@
 }
 
 .ce-site-footer__column-title .header-item {
+  font-weight: 900;
+  text-transform: uppercase;
   color: var(--t3-ce-footer-color);
 }
 
