--- a/theme/src/scss/global/helpers/buttons.scss
+++ b/theme/src/scss/global/helpers/buttons.scss
@@ -1,11 +1,11 @@
 .btn {
   // Buttons
   --t3-btn-font-size: 1rem;
-  --t3-btn-font-weight: 400;
-  --t3-btn-border: 1px;
-  --t3-btn-border-radius: 0.25rem;
-  --t3-btn-padding-top: 0.375rem;
-  --t3-btn-padding-left: 0.75rem;
+  --t3-btn-font-weight: 600;
+  --t3-btn-border: 3px;
+  --t3-btn-border-radius: 0;
+  --t3-btn-padding-top: 0.6rem;
+  --t3-btn-padding-left: 3rem;
 
   // btn primary
   --t3-btn-primary-bg-hs: var(--t3-secondary-hs);
