--- a/Resources/Private/Partials/ContentElements/Bodytext/RTEBodytext.html
+++ b/Resources/Private/Partials/ContentElements/Bodytext/RTEBodytext.html
@@ -2,6 +2,7 @@
 
 <f:if condition="{data.bodytext}">
   <f:render partial="Bodytext/Render/RTEBodytext" arguments="{
+    uid: data.uid,
     bodytext: data.bodytext}" />
 </f:if>
 
