--- a/Resources/Private/Partials/ContentElements/Header/Render/SubHeader.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/SubHeader.html
@@ -1,35 +1,35 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:if condition="{subheader}">
+<f:if condition="{subheader} || {core:isPlaceholderEnabled()}">
   <f:switch expression="{layout}">
     <f:case value="1">
       <h2 class="{position} {subheader_style} subheader-item">
-        {subheader}
+        <core:contentEditable table="tt_content" field="subheader" uid="{uid}">{subheader}</core:contentEditable>
       </h2>
     </f:case>
     <f:case value="2">
       <h3 class="{position} {subheader_style} subheader-item">
-        {subheader}
+        <core:contentEditable table="tt_content" field="subheader" uid="{uid}">{subheader}</core:contentEditable>
       </h3>
     </f:case>
     <f:case value="3">
       <h4 class="{position} {subheader_style} subheader-item">
-        {subheader}
+        <core:contentEditable table="tt_content" field="subheader" uid="{uid}">{subheader}</core:contentEditable>
       </h4>
     </f:case>
     <f:case value="4">
       <h5 class="{position} {subheader_style} subheader-item">
-        {subheader}
+        <core:contentEditable table="tt_content" field="subheader" uid="{uid}">{subheader}</core:contentEditable>
       </h5>
     </f:case>
     <f:case value="5">
       <h6 class="{position} {subheader_style} subheader-item">
-        {subheader}
+        <core:contentEditable table="tt_content" field="subheader" uid="{uid}">{subheader}</core:contentEditable>
       </h6>
     </f:case>
     <f:case value="6">
       <h6 class="{position} {subheader_style} subheader-item">
-        <small>{subheader}</small>
+        <small><core:contentEditable table="tt_content" field="subheader" uid="{uid}">{subheader}</core:contentEditable></small>
       </h6>
     </f:case>
   </f:switch>
