--- a/Resources/Private/Partials/ContentElements/Header/SubHeader.html
+++ b/Resources/Private/Partials/ContentElements/Header/SubHeader.html
@@ -1,13 +1,12 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:if condition="{data.header_layout} != 100">
-  <f:if condition="{data.subheader}">
-      <f:render partial="Header/Render/SubHeader" arguments="{
-        subheader: data.subheader,
-        layout: data.header_layout,
-        subheader_style: data.subheader_style,
-        position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
-  </f:if>
+  <f:render partial="Header/Render/SubHeader" arguments="{
+    uid: data.uid,
+    subheader: data.subheader,
+    layout: data.header_layout,
+    subheader_style: data.subheader_style,
+    position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
 </f:if>
 
 </html>
