--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
@@ -38,24 +38,24 @@
           </div>
         </f:if>
 
-        <f:if condition="{data.header}">
+        <f:if condition="{data.header} || {core:isPlaceholderEnabled()}">
           <div class="ce-img-text-link__header">
             <f:render partial="Header/Header" arguments="{_all}" />
           </div>
         </f:if>
-        <f:if condition="{data.subheader}">
+        <f:if condition="{data.subheader} || {core:isPlaceholderEnabled()}">
           <div class="ce-img-text-link__subheader">
             <f:render partial="Header/SubHeader" arguments="{_all}" />
           </div>
         </f:if>
 
-        <f:if condition="{data.bodytext}">
+        <f:if condition="{data.bodytext} || {core:isPlaceholderEnabled()}">
           <div class="ce-img-text-link__bodytext">
             <f:render partial="Bodytext/Bodytext" arguments="{_all}" />
           </div>
         </f:if>
 
-        <f:if condition="{data.link}">
+        <f:if condition="{data.link} || {core:isPlaceholderEnabled()}">
           <div class="ce-img-text-link__link">
             <f:if condition="{data.link_as_button}">
               <f:then>
