[TASK] Insert UID in data for headers in footer

--- a/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
@@ -64,6 +64,7 @@
                   <f:if condition="{flexform.column_1_title}">
                     <div class="ce-site-footer__column-title">
                       <f:render partial="Header/Render/Header" arguments="{
+                        uid: data.uid,
                         header: flexform.column_1_title,
                         layout: data.header_layout,
                         style: data.header_style}" />
@@ -85,6 +86,7 @@
                   <f:if condition="{flexform.column_2_title}">
                     <div class="ce-site-footer__column-title">
                       <f:render partial="Header/Render/Header" arguments="{
+                        uid: data.uid,
                         header: flexform.column_2_title,
                         layout: data.header_layout,
                         style: data.header_style}" />
@@ -106,6 +108,7 @@
                   <f:if condition="{flexform.column_3_title}">
                     <div class="ce-site-footer__column-title">
                       <f:render partial="Header/Render/Header" arguments="{
+                        uid: data.uid,
                         header: flexform.column_3_title,
                         layout: data.header_layout,
                         style: data.header_style}" />
