[BUGFIX] Property name

--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
@@ -34,7 +34,7 @@
           <div class="ce-img-text-link__svg-image
             text-{data.header_position} {f:if(condition:height, then: 'fixed-height')}"
             {f:if(condition:height, then: 'style="height: {height}px;"')}>
-            <f:render partial="Media/Svg" arguments="{data: data, files: svg_image, height: heightd}" />
+            <f:render partial="Media/Svg" arguments="{data: data, files: svg_image, height: height}" />
           </div>
         </f:if>
 
