[TASK] Disable streched link when frontend editing is enabled

--- a/Resources/Private/Partials/ContentElements/Link/Render/ButtonLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/Render/ButtonLink.html
@@ -36,7 +36,7 @@
     <f:link.typolink
       parameter="{link}"
       additionalAttributes="{aria-label:accessible_link_label}"
-      class="button-partial {btn_class} {f:if(condition: stretched_link, then: ' stretched-link ')}">
+      class="button-partial {btn_class} {f:if(condition: '{stretched_link} && !{core:isFrontendEditingActive()}', then: ' stretched-link ')}">
         <core:contentEditable table="tt_content" field="link_title" uid="{uid}">{link_title}</core:contentEditable>
     </f:link.typolink>
   </div>
