--- a/Resources/Private/Partials/ContentElements/Link/Render/ExternalLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/Render/ExternalLink.html
@@ -4,14 +4,14 @@
   <f:variable name="position">text-{link_position}</f:variable>
 </f:if>
 
-<f:if condition="{link_title} || {core:isPlaceholderEnabled()}">
+<f:if condition="{link_title} || {t3kit:isPlaceholderEnabled()}">
   <div class="external-link-partial__wrp {position}">
     <f:link.external
       uri="{link}"
       additionalAttributes="{aria-label:accessible_link_label}"
-      class="external-link-partial {f:if(condition: '{stretched_link} && !{core:isFrontendEditingActive()}', then: ' stretched-link ')}"
+      class="external-link-partial {f:if(condition: '{stretched_link} && !{t3kit:isFrontendEditingActive()}', then: ' stretched-link ')}"
       defaultScheme="https">
-        <core:contentEditable table="tt_content" field="link_title" uid="{uid}">{link_title}</core:contentEditable>
+        <t3kit:contentEditable table="tt_content" field="link_title" uid="{uid}">{link_title}</t3kit:contentEditable>
     </f:link.external>
   </div>
 </f:if>
