--- a/Resources/Private/Templates/ContentElements/Static/Textpic.html
+++ b/Resources/Private/Templates/ContentElements/Static/Textpic.html
@@ -45,7 +45,7 @@
         <div class="ce-textpic__header">
           <f:render partial="Header/All" arguments="{_all}" />
         </div>
-        <f:if condition="{data.bodytext} || {core:isPlaceholderEnabled()}">
+        <f:if condition="{data.bodytext} || {t3kit:isPlaceholderEnabled()}">
           <div class="ce-textpic__bodytext">
             <f:render partial="Bodytext/RTEBodytext" arguments="{_all}" />
           </div>
