--- a/Resources/Private/Partials/ContentElements/Link/ButtonLink.html
+++ b/Resources/Private/Partials/ContentElements/Link/ButtonLink.html
@@ -1,15 +1,17 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
-<f:render partial="Link/Render/ButtonLink" arguments="{
-  uid: data.uid,
-  link_title: data.link_title,
-  accessible_link_label: data.accessible_link_label,
-  button_no_bg: data.button_no_bg,
-  button_full_width: data.button_full_width,
-  button_size: data.button_size,
-  button_style: data.button_style,
-  link_position: data.link_position,
-  stretched_link : stretched_link,
-  link: data.link}" />
+<f:if condition="{data.link_title} || {data.link} || {t3kit:isPlaceholderEnabled()}">
+  <f:render partial="Link/Render/ButtonLink" arguments="{
+    uid: data.uid,
+    link_title: data.link_title,
+    accessible_link_label: data.accessible_link_label,
+    button_no_bg: data.button_no_bg,
+    button_full_width: data.button_full_width,
+    button_size: data.button_size,
+    button_style: data.button_style,
+    link_position: data.link_position,
+    stretched_link : stretched_link,
+    link: data.link}" />
+</f:if>
 
 </html>
